# OS_filesystem

./: .gitignore  CMakeLists.txt  filesys_gork.py
include/: all_includes.h  common_defs.h  data_structures.h  filesystem.h  shell.h
include/file_operations/: directory_manager.h  file_manager.h
include/fs_core/: datablock_manager.h  inode_manager.h  superblock_manager.h  virtual_disk.h
include/user_management/: user_manager.h
src/: filesystem.cpp  main.cpp  shell.cpp
src/file_operations/: directory_manager.cpp  file_manager.cpp
src/fs_core/: datablock_manager.cpp  inode_manager.cpp  superblock_manager.cpp  virtual_disk.cpp
src/user_management/: user_manager.cpp
